--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,11 @@ main {
   }
 }
 
+.languages-container {
+  justify-content: center;
+}
+
+
 .sidebar {
   margin-bottom: 15px;
   max-height: 112px;
