--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -501,8 +501,6 @@ main {
   #ABOUT
 \*-----------------------------------*/
 
-.about .article-title { margin-bottom: 15px; }
-
 .about-text {
   color: var(--light-gray);
   font-size: var(--fs-6);
@@ -510,7 +508,12 @@ main {
   line-height: 1.6;
 }
 
-.about-text p { margin-bottom: 15px; }
+.about-text p {
+  margin-bottom: 15px;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 
 
 
