--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1205,8 +1205,8 @@ main {
   }
 
   .project-img img {
-    width: 100%;
-    height: 100%;
+    width: 80%
+    height: 80%
     object-fit: cover;
   }
 }
